--- a/2003A51101.ipynb
+++ b/2003A51101.ipynb
@@ -152,7 +152,7 @@
       "cell_type": "code",
       "source": [
         "x1=d1['TotalSteps']\n",
-        "y=d1['Id']\n",
+        "y=d1['Activitydate']\n",
         "pt.plot(x1,y)"
       ],
       "metadata": {
@@ -192,8 +192,8 @@
     {
       "cell_type": "code",
       "source": [
-        "x2=d1['ActivityDate']\n",
-        "y=d1['Id']\n",
+        "x2=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x2,y)"
       ],
       "metadata": {
@@ -234,7 +234,7 @@
       "cell_type": "code",
       "source": [
         "x3=d1['TotalDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x3,y)"
       ],
       "metadata": {
@@ -275,7 +275,7 @@
       "cell_type": "code",
       "source": [
         "x4=d1['TrackerDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x4,y)"
       ],
       "metadata": {
@@ -316,7 +316,7 @@
       "cell_type": "code",
       "source": [
         "x5=d1['LoggedActivitiesDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['Activitydate']\n",
         "pt.plot(x5,y)"
       ],
       "metadata": {
@@ -357,7 +357,7 @@
       "cell_type": "code",
       "source": [
         "x6=d1['VeryActiveDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x6,y)"
       ],
       "metadata": {
@@ -398,7 +398,7 @@
       "cell_type": "code",
       "source": [
         "x7=d1['ModeratelyActiveDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x7,y)"
       ],
       "metadata": {
@@ -439,7 +439,7 @@
       "cell_type": "code",
       "source": [
         "x8=d1['LightActiveDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x8,y)"
       ],
       "metadata": {
@@ -480,7 +480,7 @@
       "cell_type": "code",
       "source": [
         "x9=d1['SedentaryActiveDistance']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x9,y)"
       ],
       "metadata": {
@@ -521,7 +521,7 @@
       "cell_type": "code",
       "source": [
         "x10=d1['VeryActiveMinutes']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x10,y)"
       ],
       "metadata": {
@@ -562,7 +562,7 @@
       "cell_type": "code",
       "source": [
         "x11=d1['FairlyActiveMinutes']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x11,y)"
       ],
       "metadata": {
@@ -644,7 +644,7 @@
       "cell_type": "code",
       "source": [
         "x13=d1['SedentaryMinutes']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x13,y)"
       ],
       "metadata": {
@@ -685,7 +685,7 @@
       "cell_type": "code",
       "source": [
         "x14=d1['Calories']\n",
-        "y=d1['Id']\n",
+        "y=d1['ActivityDate']\n",
         "pt.plot(x14,y)"
       ],
       "metadata": {
